--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,18 @@ server:
 spring:
   profiles:
     active: dev
+  datasource:
+    url: jdbc:sqlserver://devsvr01;database=SpringBootCamp
+    username: sa
+    password: admin_T3l!g3nt
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+      format_sql: true
+      dialect: org.hibernate.dialect.SQLServerDialect
+    show-sql: true
+
 
 todo:
   title: Todo App
