--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,19 @@
 			<artifactId>jquery</artifactId>
 			<version>3.5.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>datatables</artifactId>
+			<version>1.10.23</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.18</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
